# FalconsDeck

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  build.sh
qml/: Main.qml  RobotCard.qml  RobotCard.qml.bak  RobotDashboard.qml  ScannerView.qml
src/: main.cpp
src/ble/: BleConnectionManager.cpp  BleConnectionManager.h  BleDeviceScanner.cpp  BleDeviceScanner.h  BleRobotConnection.cpp  BleRobotConnection.h  FalconsRobotConnection.cpp  FalconsRobotConnection.h  JbdBmsConnection.cpp  JbdBmsConnection.h
src/models/: Robot.cpp  Robot.h  RobotListModel.cpp  RobotListModel.h
src/protocol/: PacketInterface.cpp  PacketInterface.h
